--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server-backend/index.js  --ignore Frontend"
+    "dev": "nodemon server-backend/index.js  --ignore Frontend",
+    "build": "npm  run build --prefix Frontend",
+    "start": "node server-backend/index.js"
   },
   "keywords": [],
   "author": "",
