--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server-backend/index.js  --ignore Frontend",
-    "build": "npm run build --prefix Frontend",
+    "build": "npm install --prefix Frontend && npm run build --prefix Frontend",
     "start": "node server-backend/index.js"
     
 
